Made some more changes to Offline Translation

--- a/offline-translation.html
+++ b/offline-translation.html
@@ -115,7 +115,7 @@
     </ul>
 
     <h3>Results & Learnings</h3>
-    <p>(To be completed)</p>
+    <p>(In progress)</p>
   </div>
 
   <div id="next-steps" class="tab-content">
