Some more changes

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <p>I like building AI Applications. I co-founded and was CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a>, where we helped sales teams spot risk in their sales deals by fine-tuning custom risk models on their CRM and conversational data.</p>
     <ul>
       <li>Co-built the early product</li>
-      <li>Led a team that fine-tuned models and built a retrieval-augmented generation (RAG) system for over 20 customers, including Fortune 100 companies such as IBM</li>
+      <li>Led a team that fine-tuned models and built a retrieval-augmented generation (RAG) system for ~40 customers, including Fortune 100 companies such as IBM</li>
       <li>Hired and managed a team of 10 engineers</li>
       <li>Raised over $3M in venture capital funding, and led product, engineering, and go-to-market efforts</li>
     </ul>
