--- a/projects/index.html
+++ b/projects/index.html
@@ -149,8 +149,8 @@
   <div class="project-card">
     <h3><a href="/projects/offline-translation">Offline Translation: On-Device Image-to-Text Translator for iOS</a></h3>
     <p>An iOS app that translates text in images fully offline using on-device models—no internet required. Built in Swift, it supports three pipelines with the same UI/UX: (i) Apple-native components (Vision, Core ML, Translate), (ii) hybrid open-source models such as MLKit (OCR) and M2M-100 (Translation), and (iii) compact vision-language models for direct image-to-translation.</p>
-    <p>The real-world use case envisioned is travelers or users without an internet connection who need fast and private translation of real-world text, such as road signs, menus, forms, or instructions.</p>
-    <p>Key research questions: Can a custom pipeline: (1) Translation Quality: Provide improved image-to-text translation accuracy for the languages currently supported by Apple? (2) Language Coverage: Provide working translation pipelines for languages not supported by Apple?</p>
+    <p>The real-world use case envisioned is travelers or users without an internet connection who need fast and private translation of text, such as road signs, menus, forms, or instructions.</p>
+    <p><strong>Key research questions:</strong> Can a custom pipeline: (1) Translation Quality: Provide improved image-to-text translation accuracy for the languages currently supported by Apple? (2) Language Coverage: Provide working translation pipelines for languages not supported by Apple?</p>
     <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translate, MLKit, OCR, M2M-100, miniGPT4, on-device translation, Swift, iOS, mobile AI, on-device model</p>
     <p>
       <a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">
@@ -204,9 +204,14 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="/projects/mcp-elections-canada">Model Context Protocol (MCP) Server and Client: Elections Canada</a></h3>
-    <p>A Model Context Protocol server that brings Canadian elections data into LLM tools. Specifically tested for use with Claude Desktop. In addition, a Model Context Protocol Client with a multi-agent architecture that is used at threefortythree.ca/chat. <strong>Key feature:</strong> Fine-grained querying of all electoral and polling data.</p>
-    <p class="tags">Keywords: MCP, Model Context Protocol, LLM tools, Canadian elections, Claude Desktop, multi-agent architecture</p>
+    <h3><a href="https://github.com/ThreeFortyThree-Canada/elections-canada-mcp-server" target="_blank">Model Context Protocol (MCP) Server and Client: Elections Canada</a></h3>
+    <p>A Model Context Protocol (MCP) implementation for structured, programmatic access to Canadian federal election data—built to support agentic reasoning in a chat interface.</p>
+    <p><strong>Server:</strong>
+    The MCP Server exposes detailed election results across Canada's 343 electoral districts. While the server was specifically tested for use with Claude Desktop, the server can power any MCP-compatible client.</p>
+    <p><strong>Client:</strong>
+    A multi-agent MCP client built with LangGraph, powered by the above MCP Server. See <a href="https://threefortythree.ca/chat" target="_blank">ThreeFortyThree Chat</a>.</p>
+    <p><strong>Key feature:</strong> One of the first open MCP implementations designed for political (election results) data.</p>
+    <p class="tags">Keywords: MCP, Model Context Protocol, Canadian elections, Claude Desktop, multi-agent architecture, LangGraph</p>
     <p>
       <span>Server: </span>
       <a href="https://github.com/ThreeFortyThree-Canada/elections-canada-mcp-server" target="_blank">
