--- a/projects/index.html
+++ b/projects/index.html
@@ -151,7 +151,7 @@
     <p>An iOS app that translates text in images fully offline using on-device models—no internet required. Built in Swift, it supports three pipelines with the same UI/UX: (i) Apple-native components (Vision, Core ML, Translate), (ii) hybrid open-source models such as MLKit (OCR) and M2M-100 (Translation), and (iii) compact vision-language models for direct image-to-translation.</p>
     <p>The real-world use case envisioned is travelers or users without an internet connection who need fast and private translation of text, such as road signs, menus, forms, or instructions.</p>
     <p><strong>Key research questions:</strong> Can a custom pipeline: (1) Translation Quality: Provide improved image-to-text translation accuracy for the languages currently supported by Apple? (2) Language Coverage: Provide working translation pipelines for languages not supported by Apple?</p>
-    <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translate, MLKit, OCR, M2M-100, miniGPT4, on-device translation, Swift, iOS, mobile AI, on-device model</p>
+    <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translate, MLKit, OCR, M2M-100, miniGPT4, on-device translation, Swift, iOS, mobile AI, on-device models</p>
     <p>
       <a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">
         <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
@@ -230,7 +230,7 @@
   <div class="in-progress">
     <div class="project-card">
       <h3>Inference Time & Cost Estimator</h3>
-      <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get real-time insights on cost-performance tradeoffs.</p>
+      <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get up-to-date insights on cost-performance tradeoffs.</p>
       <p class="tags">Keywords: latency, inference cost, model architecture, hardware benchmarking, deployment planning</p>
 
     </div>
