Final changes to the website

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
     <p>I like building AI Applications. I co-founded and was CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a>, where we helped sales teams spot risk in their sales deals by fine-tuning custom risk models on their CRM and conversational data.</p>
     <ul>
       <li>Co-built the early product</li>
-      <li>Led a team that fine-tuned models and built a retrieval-augmented generation (RAG) system for ~40 customers, including Fortune 100 companies such as IBM</li>
-      <li>Hired and managed a team of 10 engineers</li>
+      <li>Led the development of four core AI products, including a deal risk engine, a GPT-4-powered deal summarization platform, a memory-augmented autonomous sales agent, and a real-time coaching tool using live transcriptions</li>
+      <li>Fine-tuned models (e.g., Mistral 7B) and built retrieval-augmented generation (RAG) pipelines used by 30+ customers, including Fortune 100 companies such as IBM</li>
+      <li>Hired and managed a team of 10 outstanding engineers and a 3-person product/design/customer success pod</li>
       <li>Raised over $3M in venture capital funding, and led product, engineering, and go-to-market efforts</li>
     </ul>
     <p>I've worked on several open-source projects in areas such as AI agentic systems, Model Context Protocol (MCP), optical character recognition (OCR) models, on-device inference for edge and mobile deployment, model evaluation, and knowledge distillation. I'm particularly interested in designing AI systems that are modular, reliable, and production-ready. A selection of my open-source AI applications can be found <a href="/projects">here</a>.</p>
